Fixing styling on mobile.

--- a/custom-mood-styles.css
+++ b/custom-mood-styles.css
@@ -431,10 +431,6 @@
       height: 36px;
     }
     
-    .buttons-group {
-      flex-direction: column;
-    }
-    
     .modal-content {
       width: 95%;
       padding: 20px;
